--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
         <head>
-            <title>Django Girls blog</title>
+            <title>Django First Blog</title>
         </head>
         <body>
             <div>
-                <h1><a href="">Django Girls Blog</a></h1>
+                <h1><a href="">My first blog</a></h1>
             </div>
 
             <div>
