--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,6 +11,7 @@
             <div class="page-header">
                 <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
                 <h1><a href="/">Blog</a></h1>
+                <h2><a href = "http://127.0.0.1:8000/post/new/">Create Post</a></h2>
             </div>
             <div class="content container">
                 <div class="row">
