--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,8 +10,10 @@
         <body>
             <div class="page-header">
                 <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+                <center>
                 <h1><a href="/">Blog</a></h1>
-                <h2><a href = "http://127.0.0.1:8000/post/new/">Create Post</a></h2>
+                </center>
+                <h3><a href = "http://127.0.0.1:8000/post/new/">Create Post</a></h3>
             </div>
             <div class="content container">
                 <div class="row">
