--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,8 +7,10 @@
                     {{ post.published_date }}
                 </div>
             {% endif %}
-            <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
             <h1>{{ post.title }}</h1>
             <p>{{ post.text|linebreaksbr }}</p>
+            <a align = "left">
+            <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="button icon .add">Add to post</span></a>
+            </a>
         </div>
     {% endblock %}
