--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -70,12 +70,14 @@ h3{
     height: 35px;
     text-align: center;
     transition: width 0.6s ease 0s;
+    margin-right: auto;
     width: 160px;
         font:bold 16px arial;
         line-height: 35px;
-        margin:20px auto;
+        margin:20px right;
         text-decoration:none;
         animation: 2s linear 0s normal none infinite progress-bar-stripes;
+
 }
 
 .bot3:hover,.bot3:focus{
