--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -3,18 +3,17 @@ h1 a {
         font-family: 'Lobster';
     }
 
-body {
+
+
+.body {
         padding-left: 15px;
+        background-color: #F1EFA7;
     }
 
-
-page-header {
-        background-color: #ff9400;
+.page-header {
         margin-top: 0;
         padding: 20px 20px 20px 40px;
     }
-
-
 
 .content {
     margin-left: 40px;
@@ -24,9 +23,12 @@ h1 {
     font-family: 'Lobster', cursive;
     }
 
-
-h3{
+h3 {
     margin-right: : auto;
+}
+
+.create-post {
+    font:bold 26px arial;
 }
 
 .date {
@@ -50,7 +52,7 @@ h3{
     margin-right: 20px;
     }
 
- .post {
+.post {
     margin-bottom: 70px;
     }
 
@@ -77,7 +79,11 @@ h3{
         margin:20px right;
         text-decoration:none;
         animation: 2s linear 0s normal none infinite progress-bar-stripes;
+}
 
+.edit {
+    position: relative;
+    left: 300px;
 }
 
 .bot3:hover,.bot3:focus{
@@ -98,5 +104,10 @@ h3{
 }
 100% {
     background-position: 0 0;
+}
+
+.button {
+    position: relative;
+    left: 300px;
 }
 
