--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -9,8 +9,8 @@
             {% endif %}
             <h1>{{ post.title }}</h1>
             <p>{{ post.text|linebreaksbr }}</p>
-            <a align = "left">
-            <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="button icon .add">Add to post</span></a>
+            <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}">
+                <span class="button icon .add">Add to post</span>
             </a>
         </div>
     {% endblock %}
