--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -1,9 +1,11 @@
 {% extends 'blog/base.html' %}
 
     {% block content %}
+    	<div class="edit">
         <h1>New post</h1>
         <form method="POST" class="post-form">{% csrf_token %}
             {{ form.as_p }}
             <button type="submit" class="bot3">Save</button>
         </form>
+        </div>
     {% endblock %}
