--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -7,13 +7,22 @@ h1 a {
 
 .body {
         padding-left: 15px;
-        background-color: #F1EFA7;
+        background-color: #e8f6ff;
     }
 
 .page-header {
         margin-top: 0;
         padding: 20px 20px 20px 40px;
     }
+
+.page-footer {
+        font: bold 23px segoe script; 
+        margin-top: 0;
+        font-size: 110%;
+        padding: 5px; clear : both;
+        text-align: right;
+}
+
 
 .content {
     margin-left: 40px;
@@ -28,7 +37,9 @@ h3 {
 }
 
 .create-post {
-    font:bold 26px arial;
+    font:bold 23px segoe script;
+    margin-left:1060px;
+    margin-right:auto;
 }
 
 .date {
@@ -60,25 +71,35 @@ h3 {
     color: #000000;
     }
 
+.new-post {
+    font: bold 35px segoe script;
+    text-align: center;
 
+}
+
+.col-md-8 {
+    display:block;
+
+}
 .bot3 {
     background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, rgba(0, 0, 0, 0) 25%, rgba(0, 0, 0, 0) 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, rgba(0, 0, 0, 0) 75%, rgba(0, 0, 0, 0));
     background-size: 40px 40px;
-        border-radius: 4px;
-        background-color: #0000FF;
+    border-radius: 4px;
+    background-color: #0000FF;
     display: block;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-    color: #FFFFFF;
+    color: #e8f6ff;
     height: 35px;
     text-align: center;
     transition: width 0.6s ease 0s;
     margin-right: auto;
+    margin-left: auto;
     width: 160px;
-        font:bold 16px arial;
-        line-height: 35px;
-        margin:20px right;
-        text-decoration:none;
-        animation: 2s linear 0s normal none infinite progress-bar-stripes;
+    font:bold 16px arial;
+    line-height: 35px;
+    margin:20px right;
+    text-decoration:none;
+    animation: 2s linear 0s normal none infinite progress-bar-stripes;
 }
 
 .edit {
