--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -13,6 +13,7 @@
                 <h1><a href="/">Blog</a></h1>
                 </center>
                 <center>
+                <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
                 <h1><a class="create-post" href = "http://127.0.0.1:8000/post/new/">Create Post</a></h1>
                 </center>
             </div>
@@ -25,7 +26,7 @@
                 </div>
             </div>
         </body>
-        <footer>
-            <p>Designed by Valeriy Novikov</p>
+        <footer class="page-footer">
+            <p>© Designed by Valeriy Novikov</p>
         </footer>
     </html>
