--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -2,10 +2,10 @@
 
     {% block content %}
     	<div class="edit">
-        <h1>New post</h1>
+        <h1 class="new-post">New post</h1>
         <form method="POST" class="post-form">{% csrf_token %}
             {{ form.as_p }}
-            <button type="submit" class="bot3">Save</button>
+            <button type="submit" class="bot3" >Save</button>
         </form>
         </div>
     {% endblock %}
