--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -13,4 +13,33 @@
                 <span class="button icon .add">Add to post</span>
             </a>
         </div>
+        <div class = 'comments'>
+            {% with comments.count as total_comments %}
+            <h2>
+                {{ total_comments }} comment{{ total_comments|pluralize }}
+            </h2>
+        {% endwith %}
+        
+        {% for comment in comments %}
+        <div class="comment">
+                Comment {{ forloop.counter }} by {{ comment.name }}
+                <p class="ncy">{{ comment.created }}</p>
+            </p>
+        <p class="ncy">{{ comment.body|linebreaks }}</p>
+        </div>
+    {% empty %}
+        <p class ='ncy'>There are no comments yet.</p>
+    {% endfor %}
+
+    {% if new_comment %}
+        <h2 class = 'ncy'>Your comment has been added.</h2>
+    {% else %}
+        <h2 class = 'ncy'>Add a new comment</h2>
+        <form action="." method="post">
+        {{ comment_form.as_p }}
+        {% csrf_token %}
+        <p><input type="submit" value="Add comment" class = 'button22'></p>
+        </form>
+    {% endif %}
+        </div>
     {% endblock %}
