--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -11,6 +11,14 @@ h1 a {
 .comments_count {
     padding-bottom: 23px;
 }
+
+.search_block {
+    margin-right:1000; 
+    margin-left:0;
+    text-align: center;
+}
+
+
 .body {
         padding-left: 15px;
         background-color: #e8f6ff;
@@ -29,6 +37,11 @@ h1 a {
         text-align: right;
 }
 
+.search {
+  font: bold 23px segoe script;
+  margin-left:0px;
+  margin-right:1500px;
+}
 
 .content {
     margin-left: 40px;
