--- a/blog/templates/blog/search_form.html
+++ b/blog/templates/blog/search_form.html
@@ -16,17 +16,23 @@
                 </center>
                 <center>
                 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+                <h3><a class = "sign_up_in" href="http://127.0.0.1:8000/register/">Sign up</a></h3>
+                <h3><a class = "sign_up_in" href="http://127.0.0.1:8000/login/">Sign in</a></h3>
                 <h2><a class = "search" href="http://127.0.0.1:8000/search_form">Search</a></h2>
                 <h1><a class="create-post" href = "http://127.0.0.1:8000/post/new/">Create Post</a></h1>
                 </center>
             </div>
     <form action="/search/" method="get">
-    <div class = "search_block">
+    <div>
+    <h2>Search by titles of Posts:</h2>
     <a class = "search_block">
-        <input type="text" name="q" class = "search_block">
+        <input type="text" name="inquiry" class="search_block">
         <input type="submit" value="Search" class = "search_block">
     </a>
     </div>
     </form>
+    <footer class="page-footer">
+            <p>© Designed by Valeriy Novikov</p>
+    </footer>
 </body>
 </html>
