--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -14,6 +14,8 @@
                 </center>
                 <center>
                 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+                <h3><a class = "sign_up_in" href="http://127.0.0.1:8000/register/">Sign up</a></h3>
+                <h3><a class = "sign_up_in" href="http://127.0.0.1:8000/login/">Sign in</a></h3>
                 <h2><a class = "search" href="http://127.0.0.1:8000/search_form">Search</a></h2>
                 <h1><a class="create-post" href = "http://127.0.0.1:8000/post/new/">Create Post</a></h1>
                 </center>
