Fix problems with authorization, added

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -12,6 +12,18 @@ h1 a {
     padding-bottom: 23px;
 }
 
+
+.Delete {
+  font: bold 21px segoe script;
+}
+
+.in_up {
+  text-align: center;
+  margin-left: 0px;
+  margin-right: 1000px;
+}
+
+
 .search_block {
     margin-right:1000; 
     margin-left:0;
@@ -200,3 +212,4 @@ h3 {
   border-radius: 8px;
   background: linear-gradient(rgba(200,200,200,.5), rgba(240,240,240,.5));
 }
+
