--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -9,9 +9,18 @@
             {% endif %}
             <h1>{{ post.title }}</h1>
             <p>{{ post.text|linebreaksbr }}</p>
+
             <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}">
                 <span class="button icon .add">Add to post</span>
             </a>
+
+        </div>
+        <div>
+
+            <a class="btn btn-default" href="{% url 'delete' pk=post.pk %}">
+                <span class="button icon .add">Delete Post</span>
+            </a>
+
         </div>
         <div class = 'comments_count'>
             {% with comments.count as total_comments %}
