--- a/blog/templates/blog/unauthorized.html
+++ b/blog/templates/blog/unauthorized.html
@@ -14,7 +14,7 @@
                 <h1><a href="/">Blog</a></h1>
                 </center>
             </div>
-            <a href="/login" target="_blank" clas = "in_up">You can sign up </a> or <a href="/register" target="_blank" class = "in_up">sign in</a>
+            <a href="/login" target="_blank" clas = "in_up">You can sign in </a> or <a href="/register" target="_blank" class = "in_up">sign up</a>
     <footer class="page-footer">
             <p>© Designed by Valeriy Novikov</p>
     </footer>
