--- a/blog/templates/blog/search_form.html
+++ b/blog/templates/blog/search_form.html
@@ -31,6 +31,17 @@
     </a>
     </div>
     </form>
+
+    <form action="/search_text/" method="get">
+    <div>
+    <h2>Search by text of Posts:</h2>
+    <a class = "search_block">
+        <input type="text" name="inquiry" class="search_block">
+        <input type="submit" value="Search" class = "search_block">
+    </a>
+    </div>
+    </form>
+
     <footer class="page-footer">
             <p>© Designed by Valeriy Novikov</p>
     </footer>
