--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -10,5 +10,6 @@
        <p>{{ post.text|linebreaksbr }}</p>
     </div>
 {% endfor %}
+	{% include 'blog/pages.html' with page=posts %}
 {% endblock content %}
        
